--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -1,9 +1,21 @@
-  <!-- /.content-wrapper -->
-  <footer class="main-footer">
-    &copy; <a target="_blank" rel="noopener noreferrer" href="https://adminlte.io">AdminLTE</a>
-    - coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>
-    <div class="float-right d-none d-sm-inline-block">
-      <a target="_blank" rel="noopener noreferrer" 
-          href="https://appseed.us/product/adminlte/flask/">AdminLTE Flask</a> 
-    </div>
-  </footer>
+<!-- /.content-wrapper -->
+<footer class="main-footer">
+  &copy;
+  <a target="_blank" rel="noopener noreferrer" href="https://adminlte.io"
+    >AdminLTE</a
+  >
+  - Desarrollado por
+  <a target="_blank" rel="noopener noreferrer" href="https://appseed.us"
+    >AppSeed</a
+  >
+  <div class="float-right d-none d-sm-inline-block">
+    <span
+      >Desarrollado por Roger Infa Sanchez, GitHub:
+      <a target="_blank" href="https://github.com/rinfasulasalle"
+        >@rinfasulasalle</a
+      ></span
+    >
+    <br />
+    <span>Empresa: Gestion de Trabajadores</span>
+  </div>
+</footer>
