--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -50,8 +50,7 @@
         {{ form.hidden_tag() }}
 
         <div class="input-group mb-3">
-          {{ form.username(placeholder="Nombre de usuario",
-          class="form-control") }}
+          {{ form.dni(placeholder="Nombre de usuario", class="form-control") }}
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
