--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -26,6 +26,7 @@
         <a class="d-block">
           {{ current_user.usuario_nombres }} {{current_user.usuario_apellidos}}
         </a>
+        <a class="d-block">{{current_user.usuario_rol }}</a>
       </div>
     </div>
 
@@ -54,8 +55,6 @@
         role="menu"
         data-accordion="false"
       >
-        <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
         <li
           class="nav-item has-treeview {% if 'index' in segment %} menu-open {% endif %}"
         >
@@ -65,18 +64,18 @@
           >
             <i class="nav-icon fas fa-tachometer-alt"></i>
             <p>
-              Dashboard
+              Mis Dashboards
               <i class="right fas fa-angle-left"></i>
             </p>
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
               <a
-                href="/index.html"
+                href="/employees.html"
                 class="nav-link {% if 'index.html' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
-                <p>Dashboard v1</p>
+                <p>Employeees</p>
               </a>
             </li>
             <li class="nav-item">
@@ -85,7 +84,7 @@
                 class="nav-link {% if 'index2.html' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
-                <p>Dashboard v2</p>
+                <p>Dashboard BD</p>
               </a>
             </li>
             <li class="nav-item">
@@ -94,90 +93,7 @@
                 class="nav-link {% if 'index3.html' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
-                <p>Dashboard v3</p>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a
-            href="widgets.html"
-            class="nav-link {% if 'widgets' in segment %} active {% endif %}"
-          >
-            <i class="nav-icon fas fa-th"></i>
-            <p>
-              Widgets
-              <span class="right badge badge-danger">New</span>
-            </p>
-          </a>
-        </li>
-        <li
-          class="nav-item has-treeview {% if 'layout' in segment %} menu-open {% endif %}"
-        >
-          <a
-            href="#"
-            class="nav-link {% if 'layout' in segment %} active {% endif %}"
-          >
-            <i class="nav-icon fas fa-copy"></i>
-            <p>
-              Layout Options
-              <i class="fas fa-angle-left right"></i>
-              <span class="badge badge-info right">6</span>
-            </p>
-          </a>
-          <ul class="nav nav-treeview">
-            <li class="nav-item">
-              <a
-                href="/layout-top-nav-sidebar.html"
-                class="nav-link {% if 'layout-top' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Top Navigation + Sidebar</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/layout-boxed.html"
-                class="nav-link {% if 'layout-boxed' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Boxed</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/layout-fixed-sidebar.html"
-                class="nav-link {% if 'layout-fixed-sidebar' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fixed Sidebar</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/layout-fixed-topnav.html"
-                class="nav-link {% if 'layout-fixed-topnav' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fixed Navbar</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/layout-fixed-footer.html"
-                class="nav-link {% if 'layout-fixed-footer' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fixed Footer</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/layout-collapsed-sidebar.html"
-                class="nav-link {% if 'layout-collapsed' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Collapsed Sidebar</p>
+                <p>Dashboard RH</p>
               </a>
             </li>
           </ul>
@@ -191,7 +107,7 @@
           >
             <i class="nav-icon fas fa-chart-pie"></i>
             <p>
-              Charts
+              Gráficos
               <i class="right fas fa-angle-left"></i>
             </p>
           </a>
@@ -202,7 +118,7 @@
                 class="nav-link {% if 'charts-chartjs' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
-                <p>ChartJS</p>
+                <p>Mis Gráficos</p>
               </a>
             </li>
             <li class="nav-item">
@@ -226,94 +142,6 @@
           </ul>
         </li>
         <li
-          class="nav-item has-treeview {% if 'ui-' in segment %} menu-open {% endif %}"
-        >
-          <a
-            href="#"
-            class="nav-link {% if 'ui-' in segment %} active {% endif %}"
-          >
-            <i class="nav-icon fas fa-tree"></i>
-            <p>
-              UI Elements
-              <i class="fas fa-angle-left right"></i>
-            </p>
-          </a>
-          <ul class="nav nav-treeview">
-            <li class="nav-item">
-              <a
-                href="/ui-general.html"
-                class="nav-link {% if 'ui-general' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>General</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/ui-icons.html"
-                class="nav-link {% if 'ui-icons' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Icons</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/ui-buttons.html"
-                class="nav-link {% if 'ui-buttons' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Buttons</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/ui-sliders.html"
-                class="nav-link {% if 'ui-sliders' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Sliders</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/ui-modals.html"
-                class="nav-link {% if 'ui-modals' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Modals & Alerts</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/ui-navbar.html"
-                class="nav-link {% if 'ui-navbar' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Navbar & Tabs</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/ui-timeline.html"
-                class="nav-link {% if 'ui-timeline' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Timeline</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="/ui-ribbons.html"
-                class="nav-link {% if 'ui-ribbons' in segment %} active {% endif %}"
-              >
-                <i class="far fa-circle nav-icon"></i>
-                <p>Ribbons</p>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li
           class="nav-item has-treeview {% if 'forms-' in segment %} menu-open {% endif %}"
         >
           <a
@@ -322,7 +150,7 @@
           >
             <i class="nav-icon fas fa-edit"></i>
             <p>
-              Forms
+              Registros
               <i class="fas fa-angle-left right"></i>
             </p>
           </a>
