--- a/apps/templates/home/page-403.html
+++ b/apps/templates/home/page-403.html
@@ -1,6 +1,5 @@
-{% extends "layouts/base-fullscreen.html" %}
-
-{% block title %} Error 403 {% endblock %} 
+{% extends "layouts/base-fullscreen.html" %} {% block title %} Error 403 {%
+endblock %}
 
 <!-- Element injected in the BODY element -->
 {% block body_class %} login-page {% endblock body_class %}
@@ -8,64 +7,87 @@
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
 
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="/static/assets/plugins/fontawesome-free/css/all.min.css">
-  <!-- icheck bootstrap -->
-  <link rel="stylesheet" href="/static/assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="/static/assets/css/adminlte.min.css">
+<!-- Google Font: Source Sans Pro -->
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
+/>
+<!-- Font Awesome -->
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/fontawesome-free/css/all.min.css"
+/>
+<!-- icheck bootstrap -->
+<link
+  rel="stylesheet"
+  href="/static/assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css"
+/>
+<!-- Theme style -->
+<link rel="stylesheet" href="/static/assets/css/adminlte.min.css" />
 
-{% endblock stylesheets %}
+{% endblock stylesheets %} {% block content %}
 
-{% block content %}
-
-  <div class="login-box">
-
-    <div class="login-logo">
-        <a target="_blank" rel="noopener noreferrer" 
-           href="https://appseed.us/product/adminlte/flask/">Flask <b>Admin</b>LTE</a>
-    </div>
-
-    <!-- /.login-logo -->
-    <div class="card">
-
-      <div class="card-body login-card-body">
-
-        <h5 class="login-box-msg">
-          Error 403 - Access Denied
-        </h5>
-        <p class="login-box-msg">
-          Authentication is required to access this resource 
-          - please <a href="{{ url_for('authentication_blueprint.login') }}" class="text-center">Login</a>
-        </p>
-
-        <br />
-        <div class="text-center">
-            Not a member? <a href="{{ url_for('authentication_blueprint.register') }}" class="text-center">Register</a>
-            <br />
-            <br />
-            &copy; ColorLib 
-            <a target="_blank" rel="noopener noreferrer"
-               href="https://appseed.us/product/adminlte/flask/"><b>Admin</b>LTE</a> 
-            - coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>.
-        </div>
-
-      </div>
-      <!-- /.login-card-body -->
-    </div>
-
+<div class="login-box">
+  <div class="login-logo">
+    <a
+      target="_blank"
+      rel="noopener noreferrer"
+      href="https://appseed.us/product/adminlte/flask/"
+      >Flask <b>Admin</b>LTE</a
+    >
   </div>
+
+  <!-- /.login-logo -->
+  <div class="card">
+    <div class="card-body login-card-body">
+      <h5 class="login-box-msg">Error 403 - Acceso Denegado</h5>
+      <p class="login-box-msg">
+        Se requiere autenticación para acceder a este recurso - por favor
+        <a
+          href="{{ url_for('authentication_blueprint.login') }}"
+          class="text-center"
+          >Iniciar sesión</a
+        >
+      </p>
+
+      <br />
+      <div class="text-center">
+        ¿No eres miembro?
+        <a
+          href="{{ url_for('authentication_blueprint.register') }}"
+          class="text-center"
+          >Registrarse</a
+        >
+        <br />
+        <br />
+        &copy; ColorLib
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://appseed.us/product/adminlte/flask/"
+          ><b>Admin</b>LTE</a
+        >
+        - codificado/modificado por
+        <a
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://github.com/rinfasulasalle"
+          >Roger Ingfa (rinfasulasalle)</a
+        >.
+      </div>
+    </div>
+    <!-- /.login-card-body -->
+  </div>
+</div>
 
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-  <!-- jQuery -->
-  <script src="/static/assets/plugins/jquery/jquery.min.js"></script>
-  <!-- Bootstrap 4 -->
-  <script src="/static/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- jQuery -->
+<script src="/static/assets/plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="/static/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 {% endblock javascripts %}
