init CRUD empleados

--- a/apps/templates/home/employees.html
+++ b/apps/templates/home/employees.html
@@ -37,12 +37,12 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>Dashboard de Empleados</h1>
+          <h1>Dashboard de Usuarios</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active">DataTables</li>
+            <li class="breadcrumb-item active">Usuarios</li>
           </ol>
         </div>
       </div>
@@ -55,9 +55,6 @@
       <div class="row">
         <div class="col-12">
           <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">DataTable employees</h3>
-            </div>
             <!-- /.card-header -->
             <div class="card-body">
               <table id="example1" class="table table-bordered table-striped">
@@ -79,6 +76,14 @@
               </table>
             </div>
             <!-- /.card-body -->
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Gestionar Usuarios</h3>
+            </div>
+            <div class="card-body">
+              <!-- Aqui seccion de CRUD-->
+            </div>
           </div>
           <!-- /.card -->
         </div>
