--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -75,7 +75,7 @@
                 class="nav-link {% if 'index.html' in segment %} active {% endif %}"
               >
                 <i class="far fa-circle nav-icon"></i>
-                <p>Employeees</p>
+                <p>Usuarios</p>
               </a>
             </li>
             <li class="nav-item">
